--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,6 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>TODO write content desde netbeans con un nuebo branch</div>
     </body>
 </html>
